# pandio

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build.sh  events.c  heap.c  htable.c  llist.c  logger.c  main.c  request.c  request_parser.c  socket.c
.github/workflows/: test-server.yml
docs/: tcp.md
include/: pandio.h
include/pandio/: core.h  err.h  fs.h  queue.h  tcp.h
samples/: CMakeLists.txt  client.c  fs.c  random.c  server.c  tcp_echo.c
scripts/: errors.mjs  hello.c  long-request.js  perfect-request.js  server.js  tcp.mjs
src/: common.h  core.h  def.h  dlib.c  ev.c  ev.h  event.c  event.h  events.c  events.h  handler.h  heap.h  htable.h  http.c  http_parser.c  http_parser.h  http_request.h  internal.c  internal.h  lib.h  llist.h  logger.c  logger.h  luxio.h  main.c  net.c  net.h  pandio.c  pandio.h  parser.c  queue.h  random.c  slice.h  socket.c  socket.h  tcp.c  tcp.h  tcp_stream.h  threadpool.c  threadpool.h  (+6 more)
src/http/: http.c  http.h  http_parser.c  http_parser.h  http_request.h
src/sys/: event_epoll.c  event_iocp.c  event_kqueue.c  fs_unix.c  fs_win32.c  notifier_unix.c  notifier_win32.c  tcp_unix.c  tcp_win32.c  thread_unix.c  thread_win32.c
src/unix/: poll.c  poll.h  tcp_socket.c  tcp_stream.c  threadpool.c  threadpool.h
src/win32/: poll.c
test/: test-heap.c  test-htable.c  test-llist.c  test-parser.c  test-queue.c  test-slice.c
